変更を追加

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <title>Gitの勉強</title>
 <body>
     <h1>gh-pages ブランチは、GitHub Pages に自動で公開されます。</h1>
+    <p>この変更はmainブランチで追加されました。</p>
 </body>
 </html>
